--- a/index.html
+++ b/index.html
@@ -1,50 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
-
+    <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&display=swap" rel="stylesheet">
     <title>Title</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
 </head>
 <body>
 
-
-
-
-
-<div class="container mt-5">
-    <button class="btn btn-primary" data-bs-toggle="offcanvas" data-bs-target="#offcanvasMenu" aria-controls="offcanvasMenu">
-        Открыть меню
-    </button>
+<!--nav bar-->
+<div>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+        <div class="container-fluid">
+            <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
+                <ul class="navbar-nav mx-auto">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="#">General</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">About me</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Services</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Contacts</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
 </div>
 
-<div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasMenu" aria-labelledby="offcanvasMenuLabel">
-    <div class="offcanvas-header">
-        <h5 class="offcanvas-title" id="offcanvasMenuLabel">Меню</h5>
-        <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Закрыть"></button>
-    </div>
-    <div class="offcanvas-body">
-        <ul class="list-group">
-            <li class="list-group-item"><a href="">Страница 1</a></li>
-            <li class="list-group-item"><a href="">Страница 2</a></li>
-            <li class="list-group-item"><a href="">Страница 3</a></li>
-            <li class="list-group-item"><a href="">Страница 4</a></li>
-            <li class="list-group-item"><a href="">Страница 5</a></li>
-        </ul>
-    </div>
+<div class="container pt-5">
+    <h1>Welcome to my website!</h1>
+    <p>This is some content below the navbar.</p>
+
 </div>
 
-
-
-
-
-
-
-
-
-<div class="mt-5 p-4 bg-dark text-white text-center">
+<div class="mt-5 p-5 bg-dark text-white text-center">
     <a href="https://telegram.org" target="_blank">
         <img src="icons/telegram-app.png" alt="Telegram">
     </a>
@@ -54,15 +53,9 @@
     <a href="https://instagram.com" target="_blank">
         <img src="icons/instagram-new.png" alt="Instagram">
     </a>
-
-
-
-
-
-
 </div>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
