--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="styles.css">
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&display=swap" rel="stylesheet">
+
     <title>Title</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
 </head>
@@ -16,22 +18,23 @@
 <!--nav bar-->
 <div>
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
-        <div class="container-fluid">
+        <div class="container-fluid fade-in">
             <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
                 <ul class="navbar-nav mx-auto">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">General</a>
+                        <a class="nav-link active fade-in" aria-current="page" href="#">General</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">About me</a>
+                        <a class="nav-link fade-in" href="#About me">About me</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Services</a>
+                        <a class="nav-link fade-in" href="#Services">Services</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Contacts</a>
+                        <a class="nav-link fade-in" href="#Contacts">Contacts</a>
                     </li>
                 </ul>
+                <button id="themeToggle" class="btn btn-outline-secondary ms-3">Toggle Theme</button>
             </div>
         </div>
     </nav>
@@ -40,22 +43,71 @@
 <div class="container pt-5">
     <h1>Welcome to my website!</h1>
     <p>This is some content below the navbar.</p>
-
+    <p>This is some content below the navbar.</p>
+    <p>This is some content below the navbar.</p>
+    <p>This is some content below the navbar.</p>
+    <p>This is some content below the navbar.</p>
+    <p>This is some content below the navbar.</p>
+    <p>This is some content below the navbar.</p>
+    <p>This is some content below the navbar.</p>
+    <p>This is some content below the navbar.</p>
+    <p>This is some content below the navbar.</p>
+    <p>This is some content below the navbar.</p>
+    <p>This is some content below the navbar.</p>
+    <p>This is some content below the navbar.</p>
+    <p>This is some content below the navbar.</p>
+    <p>This is some content below the navbar.</p>
+    <p>This is some content below the navbar.</p>
+    <p>This is some content below the navbar.</p>
+    <p>This is some content below the navbar.</p>
+    <p>This is some content below the navbar.</p>
+    <p>This is some content below the navbar.</p>
+    <p>This is some content below the navbar.</p>
+    <p>This is some content below the navbar.</p>
+    <p>This is some content below the navbar.</p>
+    <p>This is some content below the navbar.</p>
+    <p>This is some content below the navbar.</p>
+    <p>This is some content below the navbar.</p>
 </div>
 
-<div class="mt-5 p-5 bg-dark text-white text-center">
-    <a href="https://telegram.org" target="_blank">
-        <img src="icons/telegram-app.png" alt="Telegram">
-    </a>
-    <a href="https://whatsapp.com" target="_blank">
-        <img src="icons/whatsapp.png" alt="WhatsApp">
-    </a>
-    <a href="https://instagram.com" target="_blank">
-        <img src="icons/instagram-new.png" alt="Instagram">
-    </a>
-</div>
+<section id="About me">
+    <div class="container centered fade-in">
+        <div class="row">
+            <div class="col text-center">
+                <div class="square">
+                    <h4>Знаю Python</h4>
+                </div>
+            </div>
+            <div class="col text-center">
+                <div class="square">
+                    <h4>Знаю C++</h4>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+<section id="Services">
+    <h1>serve</h1>
+
+</section>
+
+<section id="Contacts">
+    <div class="mt-5 p-5 bg-dark text-white text-center">
+        <a href="https://telegram.org" target="_blank">
+            <img src="icons/telegram-app.png" alt="Telegram">
+        </a>
+        <a href="https://whatsapp.com" target="_blank">
+            <img src="icons/whatsapp.png" alt="WhatsApp">
+        </a>
+        <a href="https://instagram.com" target="_blank">
+            <img src="icons/instagram-new.png" alt="Instagram">
+        </a>
+    </div>
+</section>
 
 
+<script src="JavaScript.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
