--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <title>Title</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
 </head>
-<body>
+<body class="">
 
 <!--nav bar-->
 <div>
@@ -40,46 +40,41 @@
     </nav>
 </div>
 
-<div class="container pt-5">
-    <h1>Welcome to my website!</h1>
-    <p>This is some content below the navbar.</p>
-    <p>This is some content below the navbar.</p>
-    <p>This is some content below the navbar.</p>
-    <p>This is some content below the navbar.</p>
-    <p>This is some content below the navbar.</p>
-    <p>This is some content below the navbar.</p>
-    <p>This is some content below the navbar.</p>
-    <p>This is some content below the navbar.</p>
-    <p>This is some content below the navbar.</p>
-    <p>This is some content below the navbar.</p>
-    <p>This is some content below the navbar.</p>
-    <p>This is some content below the navbar.</p>
-    <p>This is some content below the navbar.</p>
-    <p>This is some content below the navbar.</p>
-    <p>This is some content below the navbar.</p>
-    <p>This is some content below the navbar.</p>
-    <p>This is some content below the navbar.</p>
-    <p>This is some content below the navbar.</p>
-    <p>This is some content below the navbar.</p>
-    <p>This is some content below the navbar.</p>
-    <p>This is some content below the navbar.</p>
-    <p>This is some content below the navbar.</p>
-    <p>This is some content below the navbar.</p>
-    <p>This is some content below the navbar.</p>
-    <p>This is some content below the navbar.</p>
-    <p>This is some content below the navbar.</p>
+<div class="container mt-5">
+    <div class="row">
+        <div class="col-sm-4">
+            <h2>About Me</h2>
+            <h5>Photo of me:</h5>
+            <div>
+                <img src="photo/pngtree-web-programmer-avatar-png-image_15495273.png" alt="programmer_avatar" height="250" width="250">
+            </div>
+            <p>Some text about me in culpa qui officia deserunt mollit anim..</p>
+
+
+            <hr class="d-sm-none">
+        </div>
+        <div class="col-sm-8">
+
+            <h2>TITLE HEADING</h2>
+            <h5>Title description, Sep 2, 2020</h5>
+            <div>Fake Image</div>
+            <p>Some text...</p>
+            <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
+        </div>
+    </div>
 </div>
+
 
 <section id="About me">
     <div class="container centered fade-in">
         <div class="row">
             <div class="col text-center">
-                <div class="square">
+                <div class="square square ">
                     <h4>Знаю Python</h4>
                 </div>
             </div>
             <div class="col text-center">
-                <div class="square">
+                <div class="square square-cpp">
                     <h4>Знаю C++</h4>
                 </div>
             </div>
@@ -87,8 +82,9 @@
     </div>
 </section>
 
-<section id="Services">
-    <h1>serve</h1>
+
+<section class="container mt-5 centered" id="Services">
+    <h1>here is what can i do for you: </h1>
 
 
 </section>
