--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <title>Title</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
 </head>
-<body class="">
+<body>
 
 <!--nav bar-->
 <div>
@@ -69,12 +69,12 @@
     <div class="container centered fade-in">
         <div class="row">
             <div class="col text-center">
-                <div class="square square ">
+                <div class="square">
                     <h4>Знаю Python</h4>
                 </div>
             </div>
             <div class="col text-center">
-                <div class="square square-cpp">
+                <div class="square">
                     <h4>Знаю C++</h4>
                 </div>
             </div>
@@ -92,13 +92,13 @@
 
 <section id="Contacts">
     <div class="mt-5 p-5 bg-dark text-white text-center">
-        <a href="https://telegram.org" target="_blank">
+        <a href="t.me/Mykhailo_Dynnik" target="_blank">
             <img src="icons/telegram-app.png" alt="Telegram">
         </a>
         <a href="https://whatsapp.com" target="_blank">
             <img src="icons/whatsapp.png" alt="WhatsApp">
         </a>
-        <a href="https://instagram.com" target="_blank">
+        <a href="https://www.instagram.com/mishadynnik?igsh=MWQ0enY0dG1yNWp3dg==" target="_blank">
             <img src="icons/instagram-new.png" alt="Instagram">
         </a>
     </div>
