--- a/index.html
+++ b/index.html
@@ -5,18 +5,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="styles.css">
-
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&display=swap" rel="stylesheet">
-
     <title>Title</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
 </head>
+
 <body>
 
 <!--nav bar-->
-<div>
+<div class="container">
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
         <div class="container-fluid fade-in">
             <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
@@ -25,7 +24,7 @@
                         <a class="nav-link active fade-in" aria-current="page" href="#">General</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link fade-in" href="#About me">About me</a>
+                        <a class="nav-link fade-in" href="#AboutMe">About Me</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link fade-in" href="#Services">Services</a>
@@ -42,19 +41,16 @@
 
 <div class="container mt-5">
     <div class="row">
-        <div class="col-sm-4">
+        <div class="col-md-4 col-12">
             <h2>About Me</h2>
             <h5>Photo of me:</h5>
-            <div>
-                <img src="photo/pngtree-web-programmer-avatar-png-image_15495273.png" alt="programmer_avatar" height="250" width="250">
+            <div class="container">
+                <img src="photo/pngtree-web-programmer-avatar-png-image_15495273.png" alt="programmer_avatar" class="img-fluid" />
             </div>
             <p>Some text about me in culpa qui officia deserunt mollit anim..</p>
-
-
             <hr class="d-sm-none">
         </div>
-        <div class="col-sm-8">
-
+        <div class="col-md-8 col-12">
             <h2>TITLE HEADING</h2>
             <h5>Title description, Sep 2, 2020</h5>
             <div>Fake Image</div>
@@ -64,16 +60,15 @@
     </div>
 </div>
 
-
-<section id="About me">
+<section id="AboutMe">
     <div class="container centered fade-in">
-        <div class="row">
-            <div class="col text-center">
+        <div class="row text-center">
+            <div class="col-12 col-sm-6 mb-3">
                 <div class="square">
                     <h4>Знаю Python</h4>
                 </div>
             </div>
-            <div class="col text-center">
+            <div class="col-12 col-sm-6 mb-3">
                 <div class="square">
                     <h4>Знаю C++</h4>
                 </div>
@@ -83,27 +78,77 @@
 </section>
 
 
-<section class="container mt-5 centered" id="Services">
-    <h1>here is what can i do for you: </h1>
+<section id="Skills" class="mt-5">
+    <div class="container">
+        <h2 class="text-center">My Skills</h2>
+        <h4>Soft Skills</h4>
+        <div class="progress mb-3" style="height: 30px; border: 2px solid #000000;">
+            <div class="progress-bar bg-success" role="progressbar" style="width: 80%;" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">Communication (80%)</div>
+        </div>
+        <div class="progress mb-3" style="height: 30px; border: 2px solid #000000;">
+            <div class="progress-bar bg-info" role="progressbar" style="width: 70%;" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">Teamwork (70%)</div>
+        </div>
+        <div class="progress mb-3" style="height: 30px; border: 2px solid #000000;">
+            <div class="progress-bar bg-warning" role="progressbar" style="width: 90%;" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">Problem-Solving (90%)</div>
+        </div>
 
-
-</section>
-
-
-<section id="Contacts">
-    <div class="mt-5 p-5 bg-dark text-white text-center">
-        <a href="t.me/Mykhailo_Dynnik" target="_blank">
-            <img src="icons/telegram-app.png" alt="Telegram">
-        </a>
-        <a href="https://whatsapp.com" target="_blank">
-            <img src="icons/whatsapp.png" alt="WhatsApp">
-        </a>
-        <a href="https://www.instagram.com/mishadynnik?igsh=MWQ0enY0dG1yNWp3dg==" target="_blank">
-            <img src="icons/instagram-new.png" alt="Instagram">
-        </a>
+        <h4>Hard Skills</h4>
+        <div class="progress mb-3" style="height: 30px; border: 2px solid #000000;">
+            <div class="progress-bar bg-secondary" role="progressbar" style="width: 66%" aria-valuenow="66" aria-valuemin="0" aria-valuemax="100">English (66%)</div>
+        </div>
+        <div class="progress mb-3" style="height: 30px; border: 2px solid #000000;">
+            <div class="progress-bar bg-primary" role="progressbar" style="width: 85%;" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100">Python (85%)</div>
+        </div>
+        <div class="progress mb-3" style="height: 30px; border: 2px solid #000000;">
+            <div class="progress-bar bg-danger" role="progressbar" style="width: 75%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">Django (75%)</div>
+        </div>
+        <div class="progress mb-3" style="height: 30px; border: 2px solid #000000;">
+            <div class="progress-bar bg-dark" role="progressbar" style="width: 65%;" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100">PostgreSQL (65%)</div>
+        </div>
     </div>
 </section>
 
+
+<section id="Experience" class="mt-5">
+    <div class="container">
+        <h2 class="text-center">My Experience</h2>
+
+        <h4>Backend Developer</h4>
+        <div class="progress mb-3" style="height: 30px; border: 2px solid #000000;">
+            <div class="progress-bar bg-primary" role="progressbar" style="width: 90%;" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">Company A (90%)</div>
+        </div>
+
+        <h4>Junior Backend Developer</h4>
+        <div class="progress mb-3" style="height: 30px; border: 2px solid #000000;">
+            <div class="progress-bar bg-success" role="progressbar" style="width: 75%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">Company B (75%)</div>
+        </div>
+
+        <h4>Intern</h4>
+        <div class="progress mb-3" style="height: 30px; border: 2px solid #000000;" >
+            <div class="progress-bar bg-warning" role="progressbar" style="width: 1%;" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100">Company C (0%)</div>
+        </div>
+    </div>
+</section>
+
+
+
+<section class="container mt-5 centered" id="Services">
+    <h1>Here is what I can do for you:</h1>
+</section>
+
+<section id="Contacts" class="bg-dark text-white text-center p-5">
+    <div class="container">
+        <a href="t.me/Mykhailo_Dynnik" target="_blank">
+            <img src="icons/telegram-app.png" alt="Telegram" class="icon">
+        </a>
+        <a href="https://whatsapp.com" target="_blank">
+            <img src="icons/whatsapp.png" alt="WhatsApp" class="icon">
+        </a>
+        <a href="https://www.instagram.com/mishadynnik?igsh=MWQ0enY0dG1yNWp3dg==" target="_blank">
+            <img src="icons/instagram-new.png" alt="Instagram" class="icon">
+        </a>
+    </div>
+</section>
 
 <script src="JavaScript.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
