--- a/index.html
+++ b/index.html
@@ -18,6 +18,12 @@
 <div class="container">
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
         <div class="container-fluid fade-in">
+            <!-- Add this button for mobile screen navbar toggling -->
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <!-- Collapse wrapper -->
             <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
                 <ul class="navbar-nav mx-auto">
                     <li class="nav-item">
@@ -38,6 +44,7 @@
         </div>
     </nav>
 </div>
+
 
 <div class="container mt-5">
     <div class="row">
