--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <!--nav bar-->
 <div class="container">
-    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+    <nav class="navbar navbar-nav navbar-expand-lg navbar-light fixed-top">
         <div class="container-fluid fade-in">
             <!-- Add this button for mobile screen navbar toggling -->
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -27,7 +27,7 @@
             <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
                 <ul class="navbar-nav mx-auto">
                     <li class="nav-item">
-                        <a class="nav-link active fade-in" aria-current="page" href="#">General</a>
+                        <a class="nav-link fade-in" aria-current="page" href="#">General</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link fade-in" href="#AboutMe">About Me</a>
@@ -67,50 +67,50 @@
     </div>
 </div>
 
-<section id="AboutMe">
-    <div class="container centered fade-in">
-        <div class="row text-center">
-            <div class="col-12 col-sm-6 mb-3">
-                <div class="square">
-                    <h4>Знаю Python</h4>
-                </div>
-            </div>
-            <div class="col-12 col-sm-6 mb-3">
-                <div class="square">
-                    <h4>Знаю C++</h4>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
+<!--<section id="AboutMe">-->
+<!--    <div class="container centered fade-in">-->
+<!--        <div class="row text-center">-->
+<!--            <div class="col-12 col-sm-6 mb-3">-->
+<!--                <div class="square">-->
+<!--                    <h4></h4>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--            <div class="col-12 col-sm-6 mb-3">-->
+<!--                <div class="square">-->
+<!--                    <h4></h4>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--    </div>-->
+<!--</section>-->
 
 
 <section id="Skills" class="mt-5">
     <div class="container">
-        <h2 class="text-center">My Skills</h2>
-        <h4>Soft Skills</h4>
-        <div class="progress mb-3" style="height: 30px; border: 2px solid #000000;">
-            <div class="progress-bar bg-success" role="progressbar" style="width: 80%;" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">Communication (80%)</div>
+        <h2 class="text-center fade-in">My Skills</h2>
+        <h4 class="fade-in">Soft Skills</h4>
+        <div class="progress mb-3" style="height: 50px;">
+            <div class="progress-bar" role="progressbar" style="width: 80%;" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">Communication (80%)</div>
         </div>
-        <div class="progress mb-3" style="height: 30px; border: 2px solid #000000;">
-            <div class="progress-bar bg-info" role="progressbar" style="width: 70%;" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">Teamwork (70%)</div>
+        <div class="progress mb-3" style="height: 50px; ">
+            <div class="progress-bar" role="progressbar" style="width: 70%;" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">Teamwork (70%)</div>
         </div>
-        <div class="progress mb-3" style="height: 30px; border: 2px solid #000000;">
-            <div class="progress-bar bg-warning" role="progressbar" style="width: 90%;" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">Problem-Solving (90%)</div>
+        <div class="progress mb-3" style="height: 50px; ">
+            <div class="progress-bar " role="progressbar" style="width: 90%;" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">Problem-Solving (90%)</div>
         </div>
 
-        <h4>Hard Skills</h4>
-        <div class="progress mb-3" style="height: 30px; border: 2px solid #000000;">
-            <div class="progress-bar bg-secondary" role="progressbar" style="width: 66%" aria-valuenow="66" aria-valuemin="0" aria-valuemax="100">English (66%)</div>
+        <h4 class="fade-in">Hard Skills</h4>
+        <div class="progress mb-3" style="height: 50px; ">
+            <div class="progress-bar " role="progressbar" style="width: 66%" aria-valuenow="66" aria-valuemin="0" aria-valuemax="100">English (66%)</div>
         </div>
-        <div class="progress mb-3" style="height: 30px; border: 2px solid #000000;">
-            <div class="progress-bar bg-primary" role="progressbar" style="width: 85%;" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100">Python (85%)</div>
+        <div class="progress mb-3" style="height: 50px; ">
+            <div class="progress-bar " role="progressbar" style="width: 85%;" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100">Python (85%)</div>
         </div>
-        <div class="progress mb-3" style="height: 30px; border: 2px solid #000000;">
-            <div class="progress-bar bg-danger" role="progressbar" style="width: 75%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">Django (75%)</div>
+        <div class="progress mb-3" style="height: 50px; ">
+            <div class="progress-bar " role="progressbar" style="width: 75%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">Django (75%)</div>
         </div>
-        <div class="progress mb-3" style="height: 30px; border: 2px solid #000000;">
-            <div class="progress-bar bg-dark" role="progressbar" style="width: 65%;" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100">PostgreSQL (65%)</div>
+        <div class="progress mb-3" style="height: 50px; ">
+            <div class="progress-bar " role="progressbar" style="width: 65%;" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100">PostgreSQL (65%)</div>
         </div>
     </div>
 </section>
@@ -121,17 +121,17 @@
         <h2 class="text-center">My Experience</h2>
 
         <h4>Backend Developer</h4>
-        <div class="progress mb-3" style="height: 30px; border: 2px solid #000000;">
+        <div class="progress mb-3" style="height: 50px; ">
             <div class="progress-bar bg-primary" role="progressbar" style="width: 90%;" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">Company A (90%)</div>
         </div>
 
         <h4>Junior Backend Developer</h4>
-        <div class="progress mb-3" style="height: 30px; border: 2px solid #000000;">
+        <div class="progress mb-3" style="height: 50px; ">
             <div class="progress-bar bg-success" role="progressbar" style="width: 75%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">Company B (75%)</div>
         </div>
 
         <h4>Intern</h4>
-        <div class="progress mb-3" style="height: 30px; border: 2px solid #000000;" >
+        <div class="progress mb-3" style="height: 50px; " >
             <div class="progress-bar bg-warning" role="progressbar" style="width: 1%;" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100">Company C (0%)</div>
         </div>
     </div>
@@ -154,6 +154,9 @@
         <a href="https://www.instagram.com/mishadynnik?igsh=MWQ0enY0dG1yNWp3dg==" target="_blank">
             <img src="icons/instagram-new.png" alt="Instagram" class="icon">
         </a>
+<!--        <a href="https://github.com/playerunknow" target="_blank">-->
+<!--            <img src="icons/github.png" alt="Github" class="icon">-->
+<!--        </a>-->
     </div>
 </section>
 
