--- a/index.html
+++ b/index.html
@@ -39,8 +39,9 @@
                         <a class="nav-link fade-in" href="#Contacts">Contacts</a>
                     </li>
                 </ul>
-                <button id="themeToggle" class="btn btn-outline-secondary ms-3">Toggle Theme</button>
+
             </div>
+            <button id="themeToggle" class="btn btn-outline-secondary ms-3">Toggle Theme</button>
         </div>
     </nav>
 </div>
@@ -85,7 +86,7 @@
 <!--</section>-->
 
 
-<section id="Skills" class="mt-5">
+<section id="AboutMe" class="mt-5">
     <div class="container">
         <h2 class="text-center fade-in">My Skills</h2>
         <h4 class="fade-in">Soft Skills</h4>
@@ -118,21 +119,21 @@
 
 <section id="Experience" class="mt-5">
     <div class="container">
-        <h2 class="text-center">My Experience</h2>
+        <h2 class="text-center fade-in">My Experience</h2>
 
-        <h4>Backend Developer</h4>
+        <h4 class="fade-in">Backend Developer</h4>
         <div class="progress mb-3" style="height: 50px; ">
-            <div class="progress-bar bg-primary" role="progressbar" style="width: 90%;" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">Company A (90%)</div>
+            <div class="progress-bar" role="progressbar" style="width: 90%;" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">Company A (90%)</div>
         </div>
 
-        <h4>Junior Backend Developer</h4>
+        <h4 class="fade-in">Junior Backend Developer</h4>
         <div class="progress mb-3" style="height: 50px; ">
-            <div class="progress-bar bg-success" role="progressbar" style="width: 75%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">Company B (75%)</div>
+            <div class="progress-bar" role="progressbar" style="width: 75%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">Company B (75%)</div>
         </div>
 
-        <h4>Intern</h4>
+        <h4 class="fade-in">Intern</h4>
         <div class="progress mb-3" style="height: 50px; " >
-            <div class="progress-bar bg-warning" role="progressbar" style="width: 1%;" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100">Company C (0%)</div>
+            <div class="progress-bar" role="progressbar" style="width: 1%;" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100">Company C (0%)</div>
         </div>
     </div>
 </section>
@@ -143,8 +144,8 @@
     <h1>Here is what I can do for you:</h1>
 </section>
 
-<section id="Contacts" class="bg-dark text-white text-center p-5">
-    <div class="container">
+<section id="Contacts" class=" text-white text-center p-5 bottom">
+    <div class="container ">
         <a href="t.me/Mykhailo_Dynnik" target="_blank">
             <img src="icons/telegram-app.png" alt="Telegram" class="icon">
         </a>
