--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <h2>About Me</h2>
             <h5>Photo of me:</h5>
             <div class="container">
-                <img src="photo/pngtree-web-programmer-avatar-png-image_15495273.png" alt="programmer_avatar" class="img-fluid" />
+                <img src="photo/pngtree-programmer-it-developer-png-image_10439723.png" alt="programmer_avatar" class="img-fluid" />
             </div>
             <p>Some text about me in culpa qui officia deserunt mollit anim..</p>
             <hr class="d-sm-none">
@@ -61,8 +61,8 @@
         <div class="col-md-8 col-12">
             <h2>TITLE HEADING</h2>
             <h5>Title description, Sep 2, 2020</h5>
-            <div>Fake Image</div>
-            <p>Some text...</p>
+<!--            <div>Fake Image</div>-->
+<!--            <p>Some text...</p>-->
             <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
         </div>
     </div>
@@ -133,7 +133,7 @@
 
         <h4 class="fade-in">Intern</h4>
         <div class="progress mb-3" style="height: 50px; " >
-            <div class="progress-bar" role="progressbar" style="width: 1%;" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100">Company C (0%)</div>
+            <div class="progress-bar" role="progressbar" style="width: 24%;" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100">Company C (0%)</div>
         </div>
     </div>
 </section>
@@ -141,7 +141,20 @@
 
 
 <section class="container mt-5 centered" id="Services">
-    <h1>Here is what I can do for you:</h1>
+<!--    <h1>Here is what I can do for you:</h1>-->
+
+<!--    <p class="centered">Here is what I can do for you: Sed ut perspiciatis, unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam eaque ipsa, quae ab illo inventore veritatis et quasi-->
+<!--        architecto beatae vitae dicta sunt, explicabo. Nemo enim ipsam voluptatem, quia voluptas sit, aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos, qui-->
+<!--        ratione voluptatem sequi nesciunt, neque porro quisquam est, qui dolorem ipsum, quia dolor sit, amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora-->
+<!--        incidunt, ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid-->
+<!--        ex ea commodi consequatur? Quis autem vel eum iure reprehenderit, qui in ea voluptate velit esse, quam nihil molestiae consequatur, vel illum, qui dolorem eum fugiat, quo-->
+<!--        voluptas nulla pariatur? At vero eos et accusamus et iusto odio dignissimos ducimus, qui blanditiis praesentium voluptatum deleniti atque corrupti, quos dolores et quas molestias-->
+<!--        excepturi sint, obcaecati cupiditate non provident, similique sunt in culpa, qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum-->
+<!--        facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio, cumque nihil impedit, quo minus id, quod maxime placeat, facere possimus,-->
+<!--        omnis voluptas assumenda est, omnis dolor repellendus. Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet, ut et voluptates repudiandae-->
+<!--        sint et molestiae non recusandae. Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis-->
+<!--        doloribus asperiores repellat.</p>-->
+
 </section>
 
 <section id="Contacts" class=" text-white text-center p-5 bottom">
@@ -155,9 +168,9 @@
         <a href="https://www.instagram.com/mishadynnik?igsh=MWQ0enY0dG1yNWp3dg==" target="_blank">
             <img src="icons/instagram-new.png" alt="Instagram" class="icon">
         </a>
-<!--        <a href="https://github.com/playerunknow" target="_blank">-->
-<!--            <img src="icons/github.png" alt="Github" class="icon">-->
-<!--        </a>-->
+        <a href="https://github.com/playerunknow" target="_blank">
+            <img src="icons/github.png" alt="Github" class="icon">
+        </a>
     </div>
 </section>
 
