--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                         <a class="nav-link fade-in" href="#AboutMe">About Me</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link fade-in" href="#Services">Services</a>
+                        <a class="nav-link fade-in" href="#Plans">Plans</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link fade-in" href="#Contacts">Contacts</a>
@@ -50,40 +50,23 @@
 <div class="container mt-5">
     <div class="row">
         <div class="col-md-4 col-12">
-            <h2>About Me</h2>
             <h5>Photo of me:</h5>
             <div class="container">
                 <img src="photo/pngtree-programmer-it-developer-png-image_10439723.png" alt="programmer_avatar" class="img-fluid" />
             </div>
-            <p>Some text about me in culpa qui officia deserunt mollit anim..</p>
-            <hr class="d-sm-none">
         </div>
         <div class="col-md-8 col-12">
-            <h2>TITLE HEADING</h2>
-            <h5>Title description, Sep 2, 2020</h5>
-<!--            <div>Fake Image</div>-->
-<!--            <p>Some text...</p>-->
-            <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
+            <h2>a little About me</h2>
+            <h5>Title description, Sep 2, 2024</h5>
+            <p>Hello! I am a third-year student majoring in Software Engineering and
+                am already actively developing as a novice developer.
+                I can do a little programming, web development and creating various
+                applications. I like to solve interesting problems and constantly
+                master new technologies.</p>
         </div>
     </div>
+    <div></div>
 </div>
-
-<!--<section id="AboutMe">-->
-<!--    <div class="container centered fade-in">-->
-<!--        <div class="row text-center">-->
-<!--            <div class="col-12 col-sm-6 mb-3">-->
-<!--                <div class="square">-->
-<!--                    <h4></h4>-->
-<!--                </div>-->
-<!--            </div>-->
-<!--            <div class="col-12 col-sm-6 mb-3">-->
-<!--                <div class="square">-->
-<!--                    <h4></h4>-->
-<!--                </div>-->
-<!--            </div>-->
-<!--        </div>-->
-<!--    </div>-->
-<!--</section>-->
 
 
 <section id="AboutMe" class="mt-5">
@@ -91,82 +74,72 @@
         <h2 class="text-center fade-in">My Skills</h2>
         <h4 class="fade-in">Soft Skills</h4>
         <div class="progress mb-3" style="height: 50px;">
-            <div class="progress-bar" role="progressbar" style="width: 80%;" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">Communication (80%)</div>
+            <div class="progress-bar" role="progressbar" style="width: 80%;" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">Communication </div>
         </div>
         <div class="progress mb-3" style="height: 50px; ">
-            <div class="progress-bar" role="progressbar" style="width: 70%;" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">Teamwork (70%)</div>
+            <div class="progress-bar" role="progressbar" style="width: 70%;" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">Teamwork </div>
         </div>
         <div class="progress mb-3" style="height: 50px; ">
-            <div class="progress-bar " role="progressbar" style="width: 90%;" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">Problem-Solving (90%)</div>
+            <div class="progress-bar " role="progressbar" style="width: 90%;" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">Problem-Solving </div>
         </div>
 
         <h4 class="fade-in">Hard Skills</h4>
         <div class="progress mb-3" style="height: 50px; ">
-            <div class="progress-bar " role="progressbar" style="width: 66%" aria-valuenow="66" aria-valuemin="0" aria-valuemax="100">English (66%)</div>
+            <div class="progress-bar " role="progressbar" style="width: 66%" aria-valuenow="66" aria-valuemin="0" aria-valuemax="100">English(B2) </div>
         </div>
         <div class="progress mb-3" style="height: 50px; ">
-            <div class="progress-bar " role="progressbar" style="width: 85%;" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100">Python (85%)</div>
+            <div class="progress-bar " role="progressbar" style="width: 75%;" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100">Python </div>
         </div>
         <div class="progress mb-3" style="height: 50px; ">
-            <div class="progress-bar " role="progressbar" style="width: 75%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">Django (75%)</div>
+            <div class="progress-bar " role="progressbar" style="width: 65%;" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100">C++ </div>
         </div>
         <div class="progress mb-3" style="height: 50px; ">
-            <div class="progress-bar " role="progressbar" style="width: 65%;" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100">PostgreSQL (65%)</div>
+            <div class="progress-bar " role="progressbar" style="width: 18%;" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100">C# </div>
         </div>
-    </div>
-</section>
-
-
-<section id="Experience" class="mt-5">
-    <div class="container">
-        <h2 class="text-center fade-in">My Experience</h2>
-
-        <h4 class="fade-in">Backend Developer</h4>
         <div class="progress mb-3" style="height: 50px; ">
-            <div class="progress-bar" role="progressbar" style="width: 90%;" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">Company A (90%)</div>
+            <div class="progress-bar " role="progressbar" style="width: 55%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">Django </div>
         </div>
-
-        <h4 class="fade-in">Junior Backend Developer</h4>
         <div class="progress mb-3" style="height: 50px; ">
-            <div class="progress-bar" role="progressbar" style="width: 75%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">Company B (75%)</div>
-        </div>
-
-        <h4 class="fade-in">Intern</h4>
-        <div class="progress mb-3" style="height: 50px; " >
-            <div class="progress-bar" role="progressbar" style="width: 24%;" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100">Company C (0%)</div>
+            <div class="progress-bar " role="progressbar" style="width: 45%;" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100">PostgreSQL</div>
         </div>
     </div>
 </section>
 
 
 
-<section class="container mt-5 centered" id="Services">
-<!--    <h1>Here is what I can do for you:</h1>-->
+<section class="container mt-5" id="Plans">
+    <div>
+        <h1 class="centered">Future plans</h1>
 
-<!--    <p class="centered">Here is what I can do for you: Sed ut perspiciatis, unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam eaque ipsa, quae ab illo inventore veritatis et quasi-->
-<!--        architecto beatae vitae dicta sunt, explicabo. Nemo enim ipsam voluptatem, quia voluptas sit, aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos, qui-->
-<!--        ratione voluptatem sequi nesciunt, neque porro quisquam est, qui dolorem ipsum, quia dolor sit, amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora-->
-<!--        incidunt, ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid-->
-<!--        ex ea commodi consequatur? Quis autem vel eum iure reprehenderit, qui in ea voluptate velit esse, quam nihil molestiae consequatur, vel illum, qui dolorem eum fugiat, quo-->
-<!--        voluptas nulla pariatur? At vero eos et accusamus et iusto odio dignissimos ducimus, qui blanditiis praesentium voluptatum deleniti atque corrupti, quos dolores et quas molestias-->
-<!--        excepturi sint, obcaecati cupiditate non provident, similique sunt in culpa, qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum-->
-<!--        facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio, cumque nihil impedit, quo minus id, quod maxime placeat, facere possimus,-->
-<!--        omnis voluptas assumenda est, omnis dolor repellendus. Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet, ut et voluptates repudiandae-->
-<!--        sint et molestiae non recusandae. Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis-->
-<!--        doloribus asperiores repellat.</p>-->
+        <p class="centered">In the coming years, I aim to expand my knowledge and professional skills, delve deeper into the
+            development of modern web applications and study complex backend system architectures.
 
+
+            And, of course, one day I want to launch my own project that will be useful not only for business, but also for society.
+        </p>
+    </div>
+</section>
+
+<section class="container mt-5" id="Qualities">
+    <div>
+        <h1 class="centered">My qualities</h1>
+
+        <p class="centered">I am a person you can rely on. Responsibility and punctuality are
+            not just words for me, but the basis of my approach to any task. I always strive to
+            complete what I started and do it at the highest level. I consider it important not
+            only to complete the task, but also to understand how it fits into the overall goal
+            of the project or company.
+        </p>
+    </div>
 </section>
 
 <section id="Contacts" class=" text-white text-center p-5 bottom">
-    <div class="container ">
+    <div>
         <a href="t.me/Mykhailo_Dynnik" target="_blank">
-            <img src="icons/telegram-app.png" alt="Telegram" class="icon">
-        </a>
-        <a href="https://whatsapp.com" target="_blank">
-            <img src="icons/whatsapp.png" alt="WhatsApp" class="icon">
+            <img src="icons/telegram.png" alt="Telegram" class="icon">
         </a>
         <a href="https://www.instagram.com/mishadynnik?igsh=MWQ0enY0dG1yNWp3dg==" target="_blank">
-            <img src="icons/instagram-new.png" alt="Instagram" class="icon">
+            <img src="icons/instagram.png" alt="Instagram" class="icon">
         </a>
         <a href="https://github.com/playerunknow" target="_blank">
             <img src="icons/github.png" alt="Github" class="icon">
