--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <nav class="navbar navbar-nav navbar-expand-lg navbar-light fixed-top">
         <div class="container-fluid fade-in">
             <!-- Add this button for mobile screen navbar toggling -->
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+            <button class="navbar-toggler custom-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -109,9 +109,9 @@
 
 <section class="container mt-5" id="Plans">
     <div>
-        <h1 class="centered">Future plans</h1>
+        <h1 class=" ">Future plans</h1>
 
-        <p class="centered">In the coming years, I aim to expand my knowledge and professional skills, delve deeper into the
+        <p class=" ">In the coming years, I aim to expand my knowledge and professional skills, delve deeper into the
             development of modern web applications and study complex backend system architectures.
 
 
@@ -122,9 +122,9 @@
 
 <section class="container mt-5" id="Qualities">
     <div>
-        <h1 class="centered">My qualities</h1>
+        <h1 class=" ">My qualities</h1>
 
-        <p class="centered">I am a person you can rely on. Responsibility and punctuality are
+        <p class=" ">I am a person you can rely on. Responsibility and punctuality are
             not just words for me, but the basis of my approach to any task. I always strive to
             complete what I started and do it at the highest level. I consider it important not
             only to complete the task, but also to understand how it fits into the overall goal
